written swagger_models
