# api/routers/router.go
@@ -7,12 +7,20 @@ import (
 	"gorm.io/gorm"
 )
 
-// @Summary      Health Check
-// @Description  Check if the server is running and healthy.
-// @Tags         Health Check
-// @Produce      json
-// @Success      200  {object}  map[string]interface{}
-// @Router       /health [get]
+type HealthCheckResponse struct {
+	Message string      `json:"message" example:"Server is running and healthy"`
+	Status  string      `json:"status" example:"healthy"`
+	Code    int         `json:"code" example:"200"`
+	Error   interface{} `json:"error"`
+	Data    interface{} `json:"data"`
+}
+
+// @Summary Health Check Endpoint
+// @Description Provides a simple health check to verify the server's operational status
+// @Tags Health
+// @Produce json
+// @Success 200 {object} HealthCheckResponse
+// @Router /health [get]
 func SetupHealthCheckRouter(router *gin.Engine) {
 	router.GET("/health", func(ctx *gin.Context) {
 		ctx.JSON(200, gin.H{
@@ -23,7 +31,6 @@ func SetupHealthCheckRouter(router *gin.Engine) {
 			"data":    nil,
 		})
 	})
-
 }
 
 func SetupRouter(router *gin.Engine, db *gorm.DB) {
