# docs/swagger.json
@@ -16,22 +16,42 @@
     "paths": {
         "/health": {
             "get": {
-                "description": "Check if the server is running and healthy.",
+                "description": "Provides a simple health check to verify the server's operational status",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Health Check"
+                    "Health"
                 ],
-                "summary": "Health Check",
+                "summary": "Health Check Endpoint",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/routers.HealthCheckResponse"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "routers.HealthCheckResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {},
+                "error": {},
+                "message": {
+                    "type": "string",
+                    "example": "Server is running and healthy"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "healthy"
                 }
             }
         }
